log

Thu 14 Mar 2024 04:15:06 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
b4cd424
Thu 14 Mar 2024 04:22:16 PM UTC: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8b35a96
Thu 14 Mar 2024 04:36:28 PM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e179fb3
